--- a/index.html
+++ b/index.html
@@ -4,10 +4,28 @@
       <title>8bitafy - Transform images into 8-bit</title>
       <link href='http://fonts.googleapis.com/css?family=Monofett&v2' rel='stylesheet' type='text/css'>
       <link rel="stylesheet" type="text/css" href="8.css" />
+          <link rel="stylesheet" type="text/css" href="http://liamkaufman.com/css/projects.css" />
+
       <script type="text/javascript" src="8.js"></script>
       <meta charset="utf-8">
   </head>
   	<body>
+    <a href="https://github.com/liamks/8bitafy"><img style="position: absolute; top: 0; left: 0; border: 0;" src="https://a248.e.akamai.net/assets.github.com/img/edc6dae7a1079163caf7f17c60495bbb6d027c93/687474703a2f2f73332e616d617a6f6e6177732e636f6d2f6769746875622f726962626f6e732f666f726b6d655f6c6566745f677265656e5f3030373230302e706e67" alt="Fork me on GitHub"></a>
+
+    <div id="banner_wrapper">
+       <div id="liamkaufman_banner">
+        Created by <a href="http://liamkaufman.com">Liam Kaufman</a> - 2011
+      </div>
+    </div>
+
+    <div id="generating_wrapper"  style="display:none;">
+      <div id="generating">
+        <img src="generating.gif">
+        <p>8bitafying image...</p>
+      </div>
+    </div>
+
+
       <h1>8bitafy</h1>
       <h2>Transform photos into 8-bit images within your browser!</h2>
       <div id="instructions">
